[UIMA-1451] use Integer.valueOf instead of new Integer, and avoid possible lazy initialization issue with multi-tasking.
git-svn-id: https://svn.apache.org/repos/asf/incubator/uima/uimaj/trunk@797079 13f79535-47bb-0310-9956-ffa450edef68